--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -1,11 +1,13 @@
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
-  z-index: 2;
+  right: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   background-color: transparent;
   align-items: center;
+  background-color: red;
   color: white;
   font-size: 1.5rem;
   font-family: serif;
