--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -4,21 +4,25 @@
   right: 0;
   left: 0;
   display: flex;
+  padding: 15px;
   justify-content: space-between;
   background-color: transparent;
   align-items: center;
-  background-color: red;
   color: white;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: serif;
+  list-style: none;
 
   p {
     margin-left: 15px;
   }
-  .menu-li {
-    list-style: none;
+  .menu-icon {
     display: flex;
-    gap: 3px;
-    margin-right: 15px;
+    gap: 10px;
+    padding: 15px;
+    .icon {
+      margin-top: 4px;
+      color: black;
+    }
   }
 }
