--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -1,28 +1,34 @@
-.navbar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  display: flex;
-  padding: 15px;
-  justify-content: space-between;
-  background-color: transparent;
-  align-items: center;
-  color: white;
-  font-size: 2rem;
-  font-family: serif;
-  list-style: none;
-
-  p {
-    margin-left: 15px;
+div {
+  .logo {
+    width: 400px;
+    position: fixed;
+    bottom: 0;
   }
-  .menu-icon {
+  .navbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: #220e07;
     display: flex;
-    gap: 10px;
-    padding: 15px;
-    .icon {
-      margin-top: 4px;
-      color: black;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    font-size: 1.5rem;
+    font-family: serif;
+    list-style: none;
+
+    img {
+      padding-top: 10px;
+      width: 120px;
+    }
+    .menu-icon {
+      display: flex;
+      gap: 10px;
+      padding-right: 15px;
+      .icon {
+        color: black;
+      }
     }
   }
 }
