--- a/frontend/src/components/Menu/menu.scss
+++ b/frontend/src/components/Menu/menu.scss
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
 
-  transition: transform 0.7s, opacity 0.7s;
+  transition: transform 0.7s ease, opacity 0.7s ease;
   transform-origin: top;
 
   ul {
