--- a/frontend/src/components/login/login.scss
+++ b/frontend/src/components/login/login.scss
@@ -10,7 +10,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 3rem;
+
+  transition: transform 0.7s ease, opacity 0.7s ease;
+  transform-origin: bottom;
+
   .login-input {
     background-color: #1c1919;
     color: white;
@@ -20,11 +24,16 @@
     width: 50%;
     &::placeholder {
       color: white;
+      font-size: 1.2rem;
     }
   }
   .login-button {
     padding: 20px;
     width: 50%;
-    background-color: #b08568;
+    margin-top: 2rem;
+    font-size: 1.2rem;
+    background-color: #b08568d3;
+    border-radius: 30px;
+    border: #b08568 solid 1px;
   }
 }
