service frontend working

--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -13,7 +13,7 @@ div {
     font-family: serif;
     list-style: none;
     padding-inline: 15px;
-
+z-index: 1;
     img {
       margin-top: 10px;
       width: 80%;
