--- a/frontend/src/components/login/login.scss
+++ b/frontend/src/components/login/login.scss
@@ -1,39 +1,90 @@
-.login-form {
+.login-container {
   background-color: #1c1919;
-  color: white;
+  color: rgba(255, 255, 255, 0.77);
   height: 100vh;
-  font-family: serif;
-  font-style: italic;
-  letter-spacing: 0.2rem;
-  font-size: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
-
-  transition: transform 0.7s ease, opacity 0.7s ease;
-  transform-origin: bottom;
-
-  .login-input {
-    background-color: #1c1919;
-    color: white;
-    border: none;
-    border-bottom: 2px solid #b08568;
-    padding: 20px;
-    width: 50%;
-    &::placeholder {
-      color: white;
-      font-size: 1.2rem;
+  .login-form {
+    font-family: serif;
+    font-style: italic;
+    font-size: 2rem;
+    width: 600px;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    box-shadow: 3px 3px 15px -5px #b08568;
+    //box-shadow: 0px 5px 15px -2px rgb(0, 0, 0);
+    border-radius: 25px;
+    @media screen and (max-width: 768px) {
+      width: 480px;
+      box-shadow: none;
+      border-radius: 0;
     }
-  }
-  .login-button {
-    padding: 20px;
-    width: 50%;
-    margin-top: 2rem;
-    font-size: 1.2rem;
-    background-color: #b08568d3;
-    border-radius: 30px;
-    border: #b08568 solid 1px;
+
+    transition: transform 0.7s ease, opacity 0.7s ease;
+    transform-origin: bottom;
+    p {
+      letter-spacing: 0.2rem;
+    }
+
+    .login-input {
+      background-color: #1c1919;
+      color: rgba(255, 255, 255, 0.645);
+      border: none;
+      outline: none;
+      padding: 20px;
+      font-size: 1rem;
+
+      &::placeholder {
+        color: white;
+        font-size: 1rem;
+      }
+    }
+
+    .input-div {
+      width: 100%;
+      border-bottom: 2px solid #b08568;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .eye-icon {
+        font-size: 1rem;
+        padding-right: 1rem;
+      }
+    }
+    .login-div {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+      }
+      .register {
+        color: #b0856885;
+        padding-top: 38px;
+        font-size: 1.2rem;
+      }
+      .login-button {
+        padding: 8px;
+        width: 120px;
+        margin-top: 2rem;
+        font-size: 1.2rem;
+        background-color: #b08568d3;
+        border-radius: 10px;
+        border: #b08568 solid 2px;
+        &:hover {
+          background-color: #b08568;
+          border: #ffffff5e solid 2px;
+        }
+      }
+    }
   }
 }
