--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -23,10 +23,9 @@ div {
       display: flex;
       gap: 10px;
       margin-right: 7px;
-
-      .icon {
-        color: black;
-      }
+    }
+    .menu-icon svg {
+      transition: transform 0.3s ease-in-out;
     }
   }
 }
