--- a/frontend/src/components/services/services.scss
+++ b/frontend/src/components/services/services.scss
@@ -19,10 +19,10 @@
       width: 40%;
       z-index: 1;
       letter-spacing: normal;
-font-size: 1.5rem;
+      font-size: 1.5rem;
       h1 {
         letter-spacing: 1.5rem;
-        font-size: 4em;
+        font-size: 3em;
         text-align: center;
       }
     }
@@ -39,17 +39,38 @@ font-size: 1.5rem;
   }
 }
 
-
-// .content-body{
-//     // height: 100vh;
-//   background-color: #1c1919;
-//     h2{
-//         font-size: 3.5rem;
-//         font-style: italic;
-//         font-weight: 100;
-//         color: white;
-//         font-family: serif;
-//         padding: 2rem;
-//         padding-left: 5rem;
-//     }
-// }
+.content-body {
+  height: 100vh;
+  padding-left: 10rem;
+  background-color: #1c1919;
+  h2 {
+    font-size: 3.5rem;
+    font-style: italic;
+    font-weight: 100;
+    color: white;
+    font-family: serif;
+    padding: 2rem;
+    padding-left: 5rem;
+  }
+  .service-item {
+    padding: 3rem;
+    .service-content {
+      display: flex;
+      gap: 1rem;
+      padding-top: 2rem;
+      .handle-service {
+        padding: 1rem;
+        border-radius: 50%;
+        border: none;
+        font-size: 1rem;
+        font-weight: 1000;
+        background-color: #323131;
+        color: white;
+        align-items: center;
+        box-shadow: #8e6c41 2px 2px 9px;
+        margin: 0 1rem;
+        margin-top: -1rem;
+      }
+    }
+  }
+}
