--- a/frontend/src/components/register/register.scss
+++ b/frontend/src/components/register/register.scss
@@ -1,58 +1,85 @@
-body {
-  background-color: #b2aba9;
-}
-.container {
-  background-color: #f2f2f2;
+.login-container {
+  background-color: #1c1919;
+  color: rgba(255, 255, 255, 0.77);
+  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  width: 100%;
-  margin-left: 26%;
-  margin-top: 5%;
-  text-align: center;
-}
-
-input[type="text"],
-select {
-  width: 80%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-input[type="password"],
-select {
-  width: 80%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-button {
-  width: 30%;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-button:hover {
-  background-color: #45a049;
-}
-.header {
-  width: 95%;
-  background-color: rgb(7, 2, 71);
-  padding: 1px 20px;
-  color: white;
-}
-.ui-define {
-  background-color: rgb(243, 240, 243);
-  margin-left: 25%;
-  width: 50%;
-  padding: 20px 30px;
-  margin-top: 5%;
+  align-items: center;
+  .login-form {
+    font-family: serif;
+    font-style: italic;
+    font-size: 2rem;
+    width: 600px;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    box-shadow: 3px 3px 15px -5px #b08568;
+    //box-shadow: 0px 5px 15px -2px rgb(0, 0, 0);
+    border-radius: 25px;
+    @media screen and (max-width: 768px) {
+      width: 480px;
+      box-shadow: none;
+      border-radius: 0;
+    }
+    transition: transform 0.7s ease, opacity 0.7s ease;
+    transform-origin: bottom;
+    p {
+      letter-spacing: 0.2rem;
+    }
+    .login-input {
+      background-color: #1c1919;
+      color: rgba(255, 255, 255, 0.645);
+      border: none;
+      outline: none;
+      padding: 20px;
+      font-size: 1rem;
+      &::placeholder {
+        color: white;
+        font-size: 1rem;
+      }
+    }
+    .input-div {
+      width: 100%;
+      border-bottom: 2px solid #b08568;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .eye-icon {
+        font-size: 1rem;
+        padding-right: 1rem;
+      }
+    }
+    .login-div {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+      }
+      .register {
+        color: #b0856885;
+        padding-top: 38px;
+        font-size: 1.2rem;
+      }
+      .login-button {
+        padding: 8px;
+        width: 120px;
+        margin-top: 2rem;
+        font-size: 1.2rem;
+        background-color: #b08568d3;
+        border-radius: 10px;
+        border: #b08568 solid 2px;
+        &:hover {
+          background-color: #b08568;
+          border: #ffffff5e solid 2px;
+        }
+      }
+    }
+  }
 }
