--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -12,8 +12,8 @@ div {
     font-size: 1.5rem;
     font-family: serif;
     list-style: none;
-    padding-inline: 15px;
-z-index: 1;
+    padding-inline: 25px;
+    z-index: 1;
     img {
       margin-top: 10px;
       width: 80%;
@@ -26,6 +26,17 @@ z-index: 1;
     }
     .menu-icon svg {
       transition: transform 0.3s ease-in-out;
+    }
+    .cart-ul {
+      display: flex;
+      gap: 0.5rem;
+      .cart-icon {
+        color: white;
+        font-size: 1.2rem;
+        &:hover {
+          transform: scale(1.3);
+        }
+      }
     }
   }
 }
