--- a/frontend/src/components/register/register.scss
+++ b/frontend/src/components/register/register.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  .login-form {
+  .register-form {
     font-family: serif;
     font-style: italic;
     font-size: 2rem;
