--- a/frontend/src/components/services/services.scss
+++ b/frontend/src/components/services/services.scss
@@ -12,6 +12,11 @@
     align-items: center;
     justify-content: flex-end;
     text-align: justify;
+    @media screen and (max-width: 990px) {
+    
+    width: 85%;
+      margin-left: 0;
+            }
     .header-p {
       margin-left: 5rem;
       position: absolute;
@@ -21,30 +26,56 @@
       z-index: 1;
       letter-spacing: normal;
       font-size: 1.5rem;
+      @media screen and (max-width: 1010px) {
+width: 50%;
+font-size: 1.1rem;
+margin-left: 0;
+
+      }
       h1 {
         letter-spacing: 1.8rem;
         font-size: 3em;
         text-align: center;
         padding: 2rem;
+        @media screen and (max-width: 1010px) {
+font-size: 2rem;
+letter-spacing: 1rem;
+        }
       }
     }
     .imagediv {
       height: 60vh;
       width: 60vw;
       margin-right: -5rem;
+      @media screen and (max-width: 1080px) {
+        width: 100vw;
+        height: 50vh;
+      }
     }
     img {
       z-index: 0;
       height: 60vh;
       width: 60vw;
+      @media screen and (max-width: 1080px) {
+  width: 100%;
+  height: 50vh;
+      }
     }
   }
+
 }
 
 .content-body {
   height: 100vh;
   padding-left: 10rem;
   background-color: #1c1919;
+  @media screen and (max-width: 1080px) {
+padding-left: 0;
+padding: 0.5rem;
+h2{
+  border-top: none;
+}
+  }
   h2 {
     font-size: 3.5rem;
     font-style: italic;
@@ -63,10 +94,10 @@
      
     }
   }
-  .service-button{
-    width: 50%;
+  .service-button-div{
+width: 45vw;
 text-align: end;
-    button{
+ button{
       background-color: transparent;
       border: none;
       font-size: 1.5rem;
