--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -11,6 +11,8 @@ div .navbar {
   font-size: 1.5rem;
   font-family: serif;
   list-style: none;
+  padding-inline: 25px;
+  z-index: 1;
   padding-inline: 15px;
   z-index: 1;
 }
@@ -31,4 +33,15 @@ div .navbar .menu-icon {
 }
 div .navbar .menu-icon svg {
   transition: transform 0.3s ease-in-out;
+}
+div .navbar .cart-ul {
+  display: flex;
+  gap: 0.5rem;
+}
+div .navbar .cart-ul .cart-icon {
+  color: white;
+  font-size: 1.2rem;
+}
+div .navbar .cart-ul .cart-icon:hover {
+  transform: scale(1.3);
 }/*# sourceMappingURL=navbar.css.map */
