--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -42,6 +42,20 @@ div {
           transform: scale(1.3);
         }
       }
+      .cart-li .btn-badge {
+        position: absolute;
+        top: 0;
+        right:2.1rem;
+        background-color: var(--black);
+        color: var(--white);
+        font-size: 1.2rem;
+        min-width: 13px;
+        height: 18px;
+        line-height: 2.2;
+        border-radius: 20px;
+        font-weight: bold;
+        color:#e0ab88;
+      }
     }
   }
 }
