--- a/frontend/src/components/products/products.scss
+++ b/frontend/src/components/products/products.scss
@@ -11,7 +11,7 @@ body {
 
 /* Product Page Styles */
 .product-page {
-  position: relative; /* Ensure relative positioning for absolute elements */
+  position: relative; 
   display: grid;
   justify-content: right;
   align-items: right;
@@ -122,7 +122,7 @@ body {
   }
 
   .product-image {
-    position: relative; /* Ensure relative positioning for absolute elements */
+    position: relative; 
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -148,23 +148,23 @@ body {
   .product-description,
   .product-price {
     margin-top: 1rem;
-    text-align: center; /* Center text within product item */
+    text-align: center; 
   }
 
   @media screen and (max-width: 768px) {
     .product-image {
-      height: 150px; /* Adjust image height for smaller screens */
+      height: 150px; 
     }
 
     .product-title,
     .product-description,
     .product-price {
-      font-size: 0.9rem; /* Decrease font size for smaller screens */
+      font-size: 0.9rem; 
     }
 
     .product-image span {
-      font-size: 1.2rem; /* Adjust font size for span on image */
-      padding: 0.3rem 0.6rem; /* Adjust padding for span on image */
+      font-size: 1.2rem;
+      padding: 0.3rem 0.6rem; 
     }
   }
 }
@@ -320,6 +320,11 @@ body {
       align-items: center;
       justify-content: flex-end;
       text-align: justify;
+      @media screen and (max-width: 990px) {
+    
+        width: 85%;
+          margin-left: 0;
+                }
       .header-p {
         position: absolute;
         left: 6%;
@@ -328,21 +333,40 @@ body {
         z-index: 1;
         letter-spacing: normal;
         font-size: 1.5rem;
+        @media screen and (max-width: 1010px) {
+          width: 50%;
+          font-size: 1.1rem;
+          margin-left: 0;
+        }
+          
         h1 {
           letter-spacing: 1.5rem;
           font-size: 3em;
           text-align: center;
+          padding: 2rem;
+        @media screen and (max-width: 1010px) {
+font-size: 2rem;
+letter-spacing: 1rem;
+        }
         }
       }
       .imagediv {
         height: 60vh;
         width: 60vw;
         margin-right: -5rem;
+        @media screen and (max-width: 1080px) {
+          width: 100vw;
+          height: 50vh;
+        }
       }
       img {
         z-index: 0;
         height: 60vh;
         width: 60vw;
+        @media screen and (max-width: 1080px) {
+          width: 100%;
+          height: 50vh;
+              }
       }
     }
   }
