--- a/frontend/src/components/services/services.scss
+++ b/frontend/src/components/services/services.scss
@@ -69,9 +69,12 @@ letter-spacing: 1rem;
   height: 100vh;
   padding-left: 10rem;
   background-color: #1c1919;
-  @media screen and (max-width: 1080px) {
+  @media screen and (max-width: 1180px) {
 padding-left: 0;
-padding: 0.5rem;
+// padding: 0.5rem;
+.dash-p{
+  display: none;
+}
 h2{
   border-top: none;
 }
@@ -95,7 +98,7 @@ h2{
     }
   }
   .service-button-div{
-width: 45vw;
+width: 5vw;
 text-align: end;
  button{
       background-color: transparent;
