--- a/frontend/src/components/contact/contact.scss
+++ b/frontend/src/components/contact/contact.scss
@@ -1,10 +1,10 @@
 .contact-container {
   .visit-us {
     display: flex;
+    justify-content: end;
     align-items: center;
-    justify-content: center;
-    background-image: url("../../assets/contact01.jpg");
-    background-position: center;
+    background-image: url("../../assets/contact6.jpg");
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -14,7 +14,6 @@
     h1 {
       letter-spacing: 1.5rem;
       font-size: 3.5rem;
-      padding-bottom: 15rem;
       text-shadow: 3px 3px 7px black;
     }
   }
@@ -94,11 +93,12 @@
         width: 75%;
       }
       h2 {
+        border-top: 1px solid #b08568;
         text-shadow: 1px 1px 5px black;
-        background-color: #b085686c;
         margin-bottom: 2rem;
         letter-spacing: 0.3rem;
         padding: 0.2rem;
+        padding-top: 4rem;
         line-height: 2rem;
       }
       p {
