--- a/frontend/src/components/register/register.scss
+++ b/frontend/src/components/register/register.scss
@@ -1,68 +1,87 @@
 .register-container {
-  background-color: #1c1919;
+  background-color: #1C1919;
   color: rgba(255, 255, 255, 0.77);
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  margin-top: 4rem;
   .register-form {
-    padding: 4rem 11rem 7rem 11rem;
+    font-family: serif;
+    font-style: italic;
+    font-size: 2rem;
+    width: 650px;
+    padding: 4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    box-shadow: 3px 3px 15px -5px #b08568;
+    box-shadow: 3px 3px 15px -5px #B08568;
+    //box-shadow: 0px 5px 15px -2px rgb(0, 0, 0);
     border-radius: 25px;
-
     @media screen and (max-width: 768px) {
-      width: 480px;
+      width: 500px;
       box-shadow: none;
       border-radius: 0;
     }
-
     transition: transform 0.7s ease, opacity 0.7s ease;
     transform-origin: bottom;
-
     p {
       letter-spacing: 0.2rem;
-      font-size: 3rem;
     }
-
-    input {
-      width: 350px;
-      font-size: large;
-      background-color: #1c1919;
+    .register-input {
+      background-color: #1C1919;
+      color: rgba(255, 255, 255, 0.645);
       border: none;
-      padding: 1px;
-      color: white;
-
-      &::placeholder {
-        color: white;
-        font-style: italic;
-        font-size: 1.2rem;
-        border-bottom: 2px solid #b08568;
-      }
-    }
-    .register-button {
+      outline: none;
       width: 100%;
       padding: 20px;
-      margin-top: 1.5rem;
-      font-size: 1.3rem;
-      background-color: #b08568d3;
-      border-radius: 30px;
-      border: #b08568 solid 2px;
-
-      &:hover {
-        border: #ffffff5e solid 2px;
+      font-size: 1rem;
+      &::placeholder {
+        color: white;
+        font-size: 1rem;
       }
     }
-    .register-button2 {
-      font-size: 1.5rem;
-      padding: 5rem;
-      color: white;
+    .input-div {
+      width: 100%;
+      border-bottom: 2px solid #B08568;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .eye-icon {
+        font-size: 1rem;
+        padding-right: 1rem;
+      }
+    }
+    .register-div {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+      }
+      .login {
+        color: #b0856885;
+        padding-top: 38px;
+        font-size: 1.2rem;
+      }
+      .register-button {
+        padding: 8px;
+        width: 120px;
+        margin-top: 2rem;
+        font-size: 1.2rem;
+        background-color: #b08568d3;
+        border-radius: 10px;
+        border: #B08568 solid 2px;
+        &:hover {
+          background-color: #B08568;
+          border: #ffffff5e solid 2px;
+        }
+      }
     }
   }
 }
