modified Homepage.tsx, homepage.scss, Logout.tsx and logout.scss

--- a/frontend/src/components/logout/logout.scss
+++ b/frontend/src/components/logout/logout.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   .logout-div {
-    padding: 4rem;
+    padding: 6rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -16,8 +16,7 @@
     border-radius: 25px;
     @media screen and (max-width: 768px) {
       width: 500px;
-      box-shadow: none;
-      border-radius: 0;
+      padding: 4rem;
     }
 
     h1 {
@@ -30,17 +29,73 @@
       font-size: 1.5rem;
       padding: 0.5rem;
     }
-    .logout-button {
-      padding: 8px;
-      width: 120px;
+    .logout-buttons {
+      display: flex;
+      justify-content: space-between;
 
-      font-size: 1.2rem;
-      background-color: #b08568d3;
-      border-radius: 10px;
-      border: #b08568 solid 2px;
-      &:hover {
-        background-color: #b08568;
-        border: #ffffff5e solid 2px;
+      .confirm-button,
+      .cancel-button {
+        background-color: #1c1919;
+        width: 150px;
+        height: 50px;
+        border-radius: 10px;
+        border: 1px solid #c89a7aa0;
+        position: relative;
+        overflow: hidden;
+        transition: all 0.5s ease-in;
+        z-index: 0;
+
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          top: 0;
+          width: 0;
+          height: 100%;
+          transform: skew(15deg);
+          transition: all 0.5s;
+          overflow: hidden;
+          z-index: -1;
+        }
+
+        &:hover::before,
+        &:hover::after {
+          width: 58%;
+        }
+
+        &:hover span {
+          color: #0f0206;
+          transition: 0.3s;
+        }
+
+        span {
+          color: #fdf9f6;
+          font-family: serif;
+          font-size: 18px;
+          transition: all 0.3s ease-in;
+        }
+      }
+      .confirm-button {
+        &::before {
+          left: -12px;
+          background: #e0ac8999;
+        }
+
+        &::after {
+          right: -12px;
+          background: #e0ac8999;
+        }
+      }
+      .cancel-button {
+        &::before {
+          left: -10px;
+          background: rgb(121, 44, 44);
+        }
+
+        &::after {
+          right: -10px;
+          background: rgb(121, 44, 44);
+        }
       }
     }
   }
