added user icon in navbar

--- a/frontend/src/components/contact/contact.scss
+++ b/frontend/src/components/contact/contact.scss
@@ -3,8 +3,8 @@
     display: flex;
     justify-content: end;
     align-items: center;
-    background-image: url("../../assets/contact6.jpg");
-    background-position: bottom;
+    background-image: url("../../assets/contact.jpg");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
