--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -12,9 +12,8 @@ div {
     font-size: 1.5rem;
     font-family: serif;
     list-style: none;
-    padding-inline: 25px;
     z-index: 1;
-    padding-inline: 15px;
+    padding-inline: 2rem;
     z-index: 1;
     @media screen and (max-width: 990px) {
       z-index: 2;
@@ -34,18 +33,25 @@ div {
     }
     .cart-ul {
       display: flex;
-      gap: 0.5rem;
+      gap: 1.2rem;
+
+      .first-latter {
+        color: red;
+        background-color: white;
+        border-radius: 100%;
+      }
       .cart-icon {
         color: white;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         &:hover {
-          transform: scale(1.3);
+          transform: scale(1.2);
+          color: #e0ab88;
         }
       }
       .cart-li .btn-badge {
         position: absolute;
         top: 0;
-        right:2.1rem;
+        right: 2.1rem;
         background-color: var(--black);
         color: var(--white);
         font-size: 1.2rem;
@@ -54,7 +60,7 @@ div {
         line-height: 2.2;
         border-radius: 20px;
         font-weight: bold;
-        color:#e0ab88;
+        color: #e0ab88;
       }
     }
   }
